--- a/poemstyle.css
+++ b/poemstyle.css
@@ -1,4 +1,4 @@
-@import url("//https://themes.googleusercontent.com/fonts/css?kit=cGvuclDC_Z1vE_cnVEU6Ae_NZQ7StBcqH_vXVqoPMX0");
+@import url("https://themes.googleusercontent.com/fonts/css?kit=cGvuclDC_Z1vE_cnVEU6Ae_NZQ7StBcqH_vXVqoPMX0");
 
 html, body {
     height: 100%;
