--- a/mystyle.css
+++ b/mystyle.css
@@ -17,7 +17,7 @@ html, body {
     padding-left: 100px;
     padding-bottom: 150px;
     padding-top: 10px;
-    font-family: Consolas;
+    font-family: 'Inconsolata', monospace;
 }
 
 h1 {
@@ -51,7 +51,7 @@ img {
     flex-shrink: 0;
     margin-top: 20px;
     padding-right: 20px;
-    font-family: Consolas;
+    font-family: 'Inconsolata', monospace;
     text-align: right;
 }
 
