--- a/poemstyle.css
+++ b/poemstyle.css
@@ -1,3 +1,16 @@
+a:link { 
+    text-decoration: none;
+    color: black }
+
+a:visited { 
+    text-decoration: none;
+    color: black;
+}
+
+a:hover { text-decoration: none; }
+
+a:active { text-decoration: none; }
+
 html, body {
     height: 100%;
     width: 100%;
@@ -52,14 +65,3 @@ h1 {
 .title {
     font-size: 13pt;
 }
-
-a:link { text-decoration: none; }
-
-a:visited { 
-    text-decoration: none;
-    color: black;
-}
-
-a:hover { text-decoration: none; }
-
-a:active { text-decoration: none; }
