--- a/mystyle.css
+++ b/mystyle.css
@@ -76,6 +76,10 @@ img {
         flex-direction: column;
         align-items: center;
     }
+
+    .diary-pic{
+        width: 100%;
+    }
     .diary-pic {
         max-width: 85%;
         margin: 20px;
