--- a/poemstyle.css
+++ b/poemstyle.css
@@ -55,6 +55,13 @@ h1 {
     font-size: 11pt;
 }
 
+.next {
+    text-align: center;
+    padding-bottom: 50px;
+    font-size: 20px;
+    font-family: 'Inconsolata', monospace;
+}
+
 .about {
     padding-left: 100px;
     padding-right: 100px;
